css/main.css
/*! Using HTML5 Boilerplate v5.0 | MIT License | http://h5bp.com/ */

html {
    color: #212121;
    font-size: 1em;
    line-height: 1.4;
}

::-moz-selection {
    background: #b3d4fc;
    text-shadow: none;
}

::selection {
    background: #b3d4fc;
    text-shadow: none;
}

hr {
    display: block;
    height: 1px;
    border: 0;
    border-top: 1px solid #BDBDBD;
    margin: 1em 0;
    padding: 0;
}

audio,
canvas,
iframe,
img,
svg,
video {
    vertical-align: middle;
}

fieldset {
    border: 0;
    margin: 0;
    padding: 0;
}

textarea {
    resize: vertical;
}

.browserupgrade {
    margin: 0.2em 0;
    background: #ccc;
    color: #000;
    padding: 0.2em 0;
}


/* ===== Initializr Styles ==================================================
   Author: Jonathan Verrecchia - verekia.com/initializr/responsive-template
   Tweaked: Brian Liu
   ========================================================================== */

body {
    font: 16px/26px "Fira Sans", Helvetica, Helvetica Neue, Arial;
}

.wrapper {
    width: 90%;
    margin: 0 5%;
}

/* ===================
    ALL: Orange Theme
   =================== */
/*
.header-container {
    border-bottom: 20px solid #e44d26;
}

.footer-container,
.main aside {
    border-top: 20px solid #e44d26;
}

.header-container,
.footer-container,
.main aside {
    background: #f16529;
}

.title {
    color: white;
}
*/
/* ========================================
    ALL: Material Design Blue/Orange Theme
   ======================================== */

.header-container {
    border-bottom: 20px solid #1976D2;
}

.footer-container,
.main aside {
    border-top: 20px solid #1976D2;
}

nav a {
    color: white;
    background: #1976D2;
}

.header-container,
.footer-container,
.main aside {
    background: #2196F3;
}

.header-container a,
.footer-container a:hover,
.main aside a:hover {
    color: white;
    text-decoration: none;
}

.header-container a:hover,
.footer-container a,
.main aside a {
    color: white;
    text-decoration: underline;
}

.title {
    color: white;
}

.main-container a {
    color: #FF9800;
}

/* ==============
    MOBILE: Menu
   ============== */

nav ul {
    margin: 0;
    padding: 0;
    list-style-type: none;
}

nav a {
    display: block;
    margin-bottom: 10px;
    padding: 6px 0;

    text-align: center;
    text-decoration: none;
    font-weight: bold;
}

nav a:hover,
nav a:visited {
    color: white;
}

nav a:hover {
    text-decoration: underline;
}

/* ==============
    MOBILE: Main
   ============== */

.main {
    padding: 30px 0;
}

.main article h1 {
    font-size: 2em;
}

.main aside {
    color: white;
    padding: 0px 5% 10px;
}

.main aside + aside {
    margin-top: 30px;
}

.footer-container footer {
    color: white;
    padding: 20px 0;
}

/* ===============
    ALL: IE Fixes
   =============== */

.ie7 .title {
    padding-top: 20px;
}

/* ==========================================================================
   Author's custom styles
   ========================================================================== */

h1, h2, h3, h4, h5, h6 {
    font-family: "Roboto Slab", serif;
    line-height: 1.2;
}

h1.title {
    font-family: "Alegreya Sans";
    font-weight: 400;
    line-height: 1;
    font-size: 2.5em;
}

article h1 {
    font-weight: 300;
}

article h2 {
    font-weight: 400;
}

.secondary {
    color: rgba(255, 255, 255, 0.7);
}

button[type=button] {
    background: #FF9800;
    border: 0;
    border-radius: 2px;
    height: 36px;
    min-width: 64px;
    margin: 0 8px 16px 8px;
    padding: 0 8px;
    transition: background-color 0.1s, box-shadow 0.1s;
    white-space: nowrap;
}

button[type=button]:active {
    background: #FFAB40;
}

button[type=button] > a {
    width: 100%;
    height: 100%;
    color: white;
    text-decoration: none;
    line-height: 39px;
}

/* https://www.smashingmagazine.com/2014/02/making-embedded-content-work-in-responsive-design/ */

.embed-container {
    position: relative;
    padding-top: 56.25%;
    padding-bottom: 29px;
    height: 0;
    overflow: hidden;
    margin-bottom: 30px;
}

.embed-container iframe {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

/* Thanks, Smashing Mag */














/* ==========================================================================
   Media Queries
   ========================================================================== */

@media only screen and (min-width: 480px) {

/* ====================
    INTERMEDIATE: Menu
   ==================== */

    nav a {
        float: left;
        width: 27%;
        margin: 0 1.7%;
        padding: 25px 2%;
        margin-bottom: 0;
    }

    nav li:first-child a {
        margin-left: 0;
    }

    nav li:last-child a {
        margin-right: 0;
    }

/* ========================
    INTERMEDIATE: IE Fixes
   ======================== */

    nav ul li {
        display: inline;
    }

    .oldie nav a {
        margin: 0 0.7%;
    }
}

@media only screen and (min-width: 768px) {

/* ====================
    WIDE: CSS3 Effects
   ==================== */

    .header-container,
    .main aside {
        -webkit-box-shadow: 0 5px 10px #aaa;
           -moz-box-shadow: 0 5px 10px #aaa;
                box-shadow: 0 5px 10px #aaa;
    }

    button[type=button] {
        -webkit-box-shadow: 0 2px 5px #aaa;
           -moz-box-shadow: 0 2px 5px #aaa;
                box-shadow: 0 2px 5px #aaa;
    }

    button[type=button]:hover {
        -webkit-box-shadow: 0 5px 10px #aaa;
           -moz-box-shadow: 0 5px 10px #aaa;
                box-shadow: 0 5px 10px #aaa;
    }

/* ============
    WIDE: Menu
   ============ */

    .title {
        float: left;
        margin-bottom: 0;
    }

    nav {
        float: right;
        width: 38%;
    }

/* ============
    WIDE: Main
   ============ */

    .main article {
        float: left;
        width: 57%;
    }

    .main aside {
        float: right;
        width: 28%;
    }
}

@media only screen and (min-width: 1140px) {

/* ===============
    Maximal Width
   =============== */

    .wrapper {
        width: 1026px; /* 1140px - 10% for margins */
        margin: 0 auto;
    }
}

/* ==========================================================================
   Helper classes
   ========================================================================== */

.hidden {
    display: none !important;
    visibility: hidden;
}

.visuallyhidden {
    border: 0;
    clip: rect(0 0 0 0);
    height: 1px;
    margin: -1px;
    overflow: hidden;
    padding: 0;
    position: absolute;
    width: 1px;
}

.visuallyhidden.focusable:active,
.visuallyhidden.focusable:focus {
    clip: auto;
    height: auto;
    margin: 0;
    overflow: visible;
    position: static;
    width: auto;
}

.invisible {
    visibility: hidden;
}

.clearfix:before,
.clearfix:after {
    content: " ";
    display: table;
}

.clearfix:after {
    clear: both;
}

.clearfix {
    *zoom: 1;
}

/* ==========================================================================
   Print styles
   ========================================================================== */

@media print {
    *,
    *:before,
    *:after {
        background: transparent !important;
        color: #000 !important;
        box-shadow: none !important;
        text-shadow: none !important;
    }

    a,
    a:visited {
        text-decoration: underline;
    }

    a[href]:after {
        content: " (" attr(href) ")";
    }

    abbr[title]:after {
        content: " (" attr(title) ")";
    }

    a[href^="#"]:after,
    a[href^="javascript:"]:after {
        content: "";
    }

    pre,
    blockquote {
        border: 1px solid #999;
        page-break-inside: avoid;
    }

    thead {
        display: table-header-group;
    }

    tr,
    img {
        page-break-inside: avoid;
    }

    img {
        max-width: 100% !important;
    }

    p,
    h2,
    h3 {
        orphans: 3;
        widows: 3;
    }

    h2,
    h3 {
        page-break-after: avoid;
    }
}

